Explicitly crash when we fail to update WR resources
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
People
(Reporter: aosmond, Assigned: aosmond)
References
(Blocks 1 open bug)
Details
Attachments
(1 obsolete file)
Today we probably have a host of signatures due to resource update failures that happened earlier than the actual crash. This can make it difficult to understand that this was because of a resource update failure in the first place. This bug intends to crash in one place so we can collect the signatures to get a better sense of how prevalent the problem is.
| Assignee | ||
Comment 1•5 years ago
|
||
As seen in bug 1645841, resource updates are done in a batch, and when
we encounter a failure, we early exit. This means we have resource
updates that were left unapplied. When we try to use those resources
later on, we hit a crash which won't always be clear as to why.
This patch makes us crash sooner. This will make resource updates get
the same signature and thus a better sense of how frequently this is
happening in aggregate.
Comment 2•4 years ago
|
||
There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:aosmond, could you have a look please?
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Description
•