Bug 1691016 - Explicitly release assert for success during WR resource updates. r=jrmuizel

As seen in bug 1645841, resource updates are done in a batch, and when
we encounter a failure, we early exit. This means we have resource
updates that were left unapplied. When we try to use those resources
later on, we hit a crash which won't always be clear as to why.

This patch makes us crash sooner. This will make resource updates get
the same signature and thus a better sense of how frequently this is
happening in aggregate.

Differential Revision: https://phabricator.services.mozilla.com/D104204